SFUSA/force-app/main/default/objects/Single_Barrel_Stave_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>